kube/wasm/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-for-wasm
  namespace: front
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    name: web-wasm
  type: ClusterIP
